[build-system]
build-backend = "mesonpy"
requires = ["cython", "numpy", "meson-python", "wheel"]

[project]
name = "pymt_gipl"
authors = [
  {name = "Kang Wang", email = "wangkang1984@gmail.com"},
]
maintainers = [
  {name = "Mark Piper", email = "mark.piper@colorado.edu"},
]
description = "PyMT plugin for the GIPL model"
license = {text = "MIT License"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
keywords=["bmi", "pymt", "GIPL", "permafrost"]
dynamic = ["version"]
dependencies = [
  "numpy",
]

[project.urls]
homepage = "https://github.com/csdms"

[project.entry-points."pymt.plugins"]
ECSimpleSnow = "pymt_gipl._bmi:GIPL"

[project.optional-dependencies]
dev = [
  "meson",
  "meson-python",
  "ninja",
  "nox",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]
testing = [
  "bmi-tester>=0.5.4",
]

[tool.setuptools.dynamic]
version = {attr = "pymt_gipl._version.__version__"}

[tool.pytest.ini_options]
minversion = "5.0"
testpaths = ["pymt_gipl", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
    --tb native
    --strict-markers
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "pymt_gipl/_version.py"
